--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,16 @@
 /* 添加 图片 */
+
 .hello {
   color: red;
-  /* background: url('./icon.png'); */
+  font-family: 'MyFont';
+  background: url('./icon.png');
+}
+
+/* 增加字体 */
+
+@font-face {
+  font-family: 'MyFont';
+  src: url('./my-font.woff2') format('woff2'), + url('./my-font.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
 }
